objects/maps__CalendarResourceShift__c.object
<CustomObject>
    <fields>
        <fullName>maps__BreakDuration__c</fullName>
        <label>Break Duration (Minutes)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__BreakEndHour__c</fullName>
        <label>Break End Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__BreakEndMinute__c</fullName>
        <label>Break End Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__BreakStartHour__c</fullName>
        <label>Break Start Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__BreakStartMinute__c</fullName>
        <label>Break Start Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__EndAddress__c</fullName>
        <label>End Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__EndHour__c</fullName>
        <label>End Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__EndLocation__c</fullName>
        <label>End Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>maps__EndMinute__c</fullName>
        <label>End Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__ResourceId__c</fullName>
        <label>Resource Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__StartAddress__c</fullName>
        <label>Start Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__StartHour__c</fullName>
        <label>Start Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__StartLocation__c</fullName>
        <label>Start Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>maps__StartMinute__c</fullName>
        <label>Start Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Maps Calendar Resource Shift</label>
    <nameField>
        <displayFormat>Shift-{0}</displayFormat>
        <label>Shift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Calendar Resource Shifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>